packages/@aws-cdk-testing/framework-integ/test/aws-eks-v2/test/integ.eks-oidc-provider.js.snapshot/aws-cdk-eks-v2-alpha-oidc-provider-test.template.json
{
 "Resources": {
  "NoClientsNoThumbprint8BF1533F": {
   "Type": "AWS::IAM::OIDCProvider",
   "Properties": {
    "ClientIdList": [
     "sts.amazonaws.com"
    ],
    "Url": {
     "Fn::Join": [
      "",
      [
       "https://oidc.eks.",
       {
        "Ref": "AWS::Region"
       },
       ".amazonaws.com/id/test2"
      ]
     ]
    }
   }
  },
  "ClusterDefaultVpcFA9F2722": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc"
     }
    ]
   }
  },
  "ClusterDefaultVpcPublicSubnet1Subnet3BFE1BDA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPublicSubnet1RouteTable1DCCDD98": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPublicSubnet1RouteTableAssociationAFBE6789": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPublicSubnet1RouteTable1DCCDD98"
    },
    "SubnetId": {
     "Ref": "ClusterDefaultVpcPublicSubnet1Subnet3BFE1BDA"
    }
   }
  },
  "ClusterDefaultVpcPublicSubnet1DefaultRouteCF22EF6E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClusterDefaultVpcIGW756BE43E"
    },
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPublicSubnet1RouteTable1DCCDD98"
    }
   },
   "DependsOn": [
    "ClusterDefaultVpcVPCGWC1D00388"
   ]
  },
  "ClusterDefaultVpcPublicSubnet1EIP498E2BD2": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet1"
     }
    ]
   }
  },
  "ClusterDefaultVpcPublicSubnet1NATGateway6E21013E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClusterDefaultVpcPublicSubnet1EIP498E2BD2",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClusterDefaultVpcPublicSubnet1Subnet3BFE1BDA"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ClusterDefaultVpcPublicSubnet1DefaultRouteCF22EF6E",
    "ClusterDefaultVpcPublicSubnet1RouteTableAssociationAFBE6789"
   ]
  },
  "ClusterDefaultVpcPublicSubnet2SubnetC4E9A966": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPublicSubnet2RouteTable6F1F5F47": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPublicSubnet2RouteTableAssociationA8539C50": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPublicSubnet2RouteTable6F1F5F47"
    },
    "SubnetId": {
     "Ref": "ClusterDefaultVpcPublicSubnet2SubnetC4E9A966"
    }
   }
  },
  "ClusterDefaultVpcPublicSubnet2DefaultRoute1FA8621E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClusterDefaultVpcIGW756BE43E"
    },
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPublicSubnet2RouteTable6F1F5F47"
    }
   },
   "DependsOn": [
    "ClusterDefaultVpcVPCGWC1D00388"
   ]
  },
  "ClusterDefaultVpcPublicSubnet2EIP265F4810": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet2"
     }
    ]
   }
  },
  "ClusterDefaultVpcPublicSubnet2NATGateway4AF4B728": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClusterDefaultVpcPublicSubnet2EIP265F4810",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClusterDefaultVpcPublicSubnet2SubnetC4E9A966"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "ClusterDefaultVpcPublicSubnet2DefaultRoute1FA8621E",
    "ClusterDefaultVpcPublicSubnet2RouteTableAssociationA8539C50"
   ]
  },
  "ClusterDefaultVpcPrivateSubnet1Subnet03F39409": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet1RouteTable7844020C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet1RouteTableAssociationF8A67D95": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPrivateSubnet1RouteTable7844020C"
    },
    "SubnetId": {
     "Ref": "ClusterDefaultVpcPrivateSubnet1Subnet03F39409"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet1DefaultRouteD624C8BD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClusterDefaultVpcPublicSubnet1NATGateway6E21013E"
    },
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPrivateSubnet1RouteTable7844020C"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet2SubnetA526AEA7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet2RouteTable1F9A5298": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet2RouteTableAssociationE1240DF2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPrivateSubnet2RouteTable1F9A5298"
    },
    "SubnetId": {
     "Ref": "ClusterDefaultVpcPrivateSubnet2SubnetA526AEA7"
    }
   }
  },
  "ClusterDefaultVpcPrivateSubnet2DefaultRouteAB55737C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClusterDefaultVpcPublicSubnet2NATGateway4AF4B728"
    },
    "RouteTableId": {
     "Ref": "ClusterDefaultVpcPrivateSubnet2RouteTable1F9A5298"
    }
   }
  },
  "ClusterDefaultVpcIGW756BE43E": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-v2-alpha-oidc-provider-test/Cluster/DefaultVpc"
     }
    ]
   }
  },
  "ClusterDefaultVpcVPCGWC1D00388": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ClusterDefaultVpcIGW756BE43E"
    },
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterDefaultVpcRestrictDefaultSecurityGroupCustomResource59F333B7": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "ClusterDefaultVpcFA9F2722",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClusterRoleFA261979": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": [
        "sts:AssumeRole",
        "sts:TagSession"
       ],
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSComputePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSBlockStoragePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSLoadBalancingPolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSNetworkingPolicy"
       ]
      ]
     }
    ]
   }
  },
  "ClusterControlPlaneSecurityGroupD274242C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClusterDefaultVpcFA9F2722"
    }
   }
  },
  "ClusterClusternodePoolRole69276141": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSWorkerNodePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     }
    ]
   }
  },
  "ClusterEB0386A7": {
   "Type": "AWS::EKS::Cluster",
   "Properties": {
    "AccessConfig": {
     "AuthenticationMode": "API"
    },
    "ComputeConfig": {
     "Enabled": true,
     "NodePools": [
      "system",
      "general-purpose"
     ],
     "NodeRoleArn": {
      "Fn::GetAtt": [
       "ClusterClusternodePoolRole69276141",
       "Arn"
      ]
     }
    },
    "KubernetesNetworkConfig": {
     "ElasticLoadBalancing": {
      "Enabled": true
     },
     "IpFamily": "ipv4"
    },
    "ResourcesVpcConfig": {
     "EndpointPrivateAccess": true,
     "EndpointPublicAccess": true,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "ClusterControlPlaneSecurityGroupD274242C",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "ClusterDefaultVpcPublicSubnet1Subnet3BFE1BDA"
      },
      {
       "Ref": "ClusterDefaultVpcPublicSubnet2SubnetC4E9A966"
      },
      {
       "Ref": "ClusterDefaultVpcPrivateSubnet1Subnet03F39409"
      },
      {
       "Ref": "ClusterDefaultVpcPrivateSubnet2SubnetA526AEA7"
      }
     ]
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "ClusterRoleFA261979",
      "Arn"
     ]
    },
    "StorageConfig": {
     "BlockStorage": {
      "Enabled": true
     }
    },
    "Version": "1.32"
   },
   "DependsOn": [
    "ClusterDefaultVpcIGW756BE43E",
    "ClusterDefaultVpcPrivateSubnet1DefaultRouteD624C8BD",
    "ClusterDefaultVpcPrivateSubnet1RouteTable7844020C",
    "ClusterDefaultVpcPrivateSubnet1RouteTableAssociationF8A67D95",
    "ClusterDefaultVpcPrivateSubnet1Subnet03F39409",
    "ClusterDefaultVpcPrivateSubnet2DefaultRouteAB55737C",
    "ClusterDefaultVpcPrivateSubnet2RouteTable1F9A5298",
    "ClusterDefaultVpcPrivateSubnet2RouteTableAssociationE1240DF2",
    "ClusterDefaultVpcPrivateSubnet2SubnetA526AEA7",
    "ClusterDefaultVpcPublicSubnet1DefaultRouteCF22EF6E",
    "ClusterDefaultVpcPublicSubnet1EIP498E2BD2",
    "ClusterDefaultVpcPublicSubnet1NATGateway6E21013E",
    "ClusterDefaultVpcPublicSubnet1RouteTable1DCCDD98",
    "ClusterDefaultVpcPublicSubnet1RouteTableAssociationAFBE6789",
    "ClusterDefaultVpcPublicSubnet1Subnet3BFE1BDA",
    "ClusterDefaultVpcPublicSubnet2DefaultRoute1FA8621E",
    "ClusterDefaultVpcPublicSubnet2EIP265F4810",
    "ClusterDefaultVpcPublicSubnet2NATGateway4AF4B728",
    "ClusterDefaultVpcPublicSubnet2RouteTable6F1F5F47",
    "ClusterDefaultVpcPublicSubnet2RouteTableAssociationA8539C50",
    "ClusterDefaultVpcPublicSubnet2SubnetC4E9A966",
    "ClusterDefaultVpcFA9F2722",
    "ClusterDefaultVpcRestrictDefaultSecurityGroupCustomResource59F333B7",
    "ClusterDefaultVpcVPCGWC1D00388"
   ]
  },
  "ClusterKubectlReadyBarrier200052AF": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "ClusterEB0386A7"
   ]
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "ClusterDefaultVpcFA9F2722",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "55549d0bfa9628b306c349544b7d95017221e259e17875f3d38f2a3d2da5043f.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs24.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ]
  },
  "OidcProviderNative8DF822B2": {
   "Type": "AWS::IAM::OIDCProvider",
   "Properties": {
    "ClientIdList": [
     "sts.amazonaws.com"
    ],
    "Url": {
     "Fn::GetAtt": [
      "ClusterEB0386A7",
      "OpenIdConnectIssuerUrl"
     ]
    }
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
